# Smart_Mavi

./: README.md  index.html
AayushTech07Dashboard/: CMakeLists.txt
AayushTech07Dashboard/include/: common.h  dashboard.h  student_dialog.h
AayushTech07Dashboard/src/: dashboard.cpp  student_dialog.cpp
S M.V M/: BUILD.md  CMakeLists.txt  COMPLETED_STATUS.md  COMPLETE_UI_SUMMARY.md  DEPLOYMENT_SUMMARY.md  PROJECT_SUMMARY.md  README.md  UI_ENHANCEMENTS.md  build.sh  create-packages.sh  install.sh  run.sh
S M.V M/build-packages/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  cmake_install.cmake  install_manifest.txt
S M.V M/build-packages/.qt/: QtDeploySupport.cmake
S M.V M/build-packages/SmartMAVIManager_autogen/: moc_predefs.h  mocs_compilation.cpp
S M.V M/build-packages/SmartMAVIManager_autogen/5AJYTCBASU/: moc_adminpanel.cpp  moc_adminpanel.cpp.d
S M.V M/build-packages/SmartMAVIManager_autogen/6YEA5652QU/: moc_mainwindow.cpp.d
S M.V M/build-packages/SmartMAVIManager_autogen/CRGL2FGSXR/: moc_database.cpp  moc_database.cpp.d
S M.V M/build-packages/SmartMAVIManager_autogen/EPPU6REHSQ/: moc_nepalicalendar.cpp.d
S M.V M/build-packages/SmartMAVIManager_autogen/KLZYWGTNTX/: moc_csvhandler.cpp.d  moc_passwordhash.cpp  moc_passwordhash.cpp.d
S M.V M/build-packages/SmartMAVIManager_autogen/OFTFDIG4ME/: moc_attendancedialog.cpp  moc_attendancedialog.cpp.d  moc_classdialog.cpp.d  moc_studentdialog.cpp  moc_studentdialog.cpp.d  moc_teacherdialog.cpp.d
S M.V M/build-packages/_CPack_Packages/Linux/DEB/: SmartMAVIManager-1.0.0-Linux.deb
S M.V M/build-packages/_CPack_Packages/Linux/DEB/SmartMAVIManager-1.0.0-Linux/: control  md5sums
S M.V M/include/: mainwindow.h
S M.V M/include/admin/: adminpanel.h
S M.V M/include/attendance/: advancedattendance.h  advancedattendance_old.h
S M.V M/include/communication/: communicationmanager.h
S M.V M/include/database/: database.h
S M.V M/include/dialogs/: attendancedialog.h  classdialog.h  studentdialog.h  teacherdialog.h
S M.V M/include/models/: attendance.h  class.h  enhancedstudent.h  nepalicalendar.h  student.h  teacher.h
S M.V M/include/reports/: advancedreports.h  advancedreports_old.h  reports.h
S M.V M/include/settings/: settingsmanager.h
S M.V M/include/utils/: csvhandler.h  passwordhash.h
S M.V M/include/widgets/: dashboard.h
S M.V M/packaging/: smart-mavi-manager.desktop
S M.V M/resources/: resources.qrc
S M.V M/resources/styles/: dark.qss  light.qss  modern.qss
S M.V M/scripts/: build-linux.sh  build-macos.sh  build-windows.bat
S M.V M/src/: main.cpp  mainwindow.cpp
S M.V M/src/admin/: adminpanel.cpp
S M.V M/src/attendance/: advancedattendance.cpp
S M.V M/src/communication/: communicationmanager.cpp
S M.V M/src/database/: database.cpp
S M.V M/src/dialogs/: attendancedialog.cpp  classdialog.cpp  studentdialog.cpp  teacherdialog.cpp
S M.V M/src/models/: attendance.cpp  class.cpp  enhancedstudent.cpp  nepalicalendar.cpp  student.cpp  teacher.cpp
S M.V M/src/reports/: advancedreports.cpp  reports.cpp
S M.V M/src/settings/: settingsmanager.cpp
S M.V M/src/utils/: csvhandler.cpp  passwordhash.cpp
S M.V M/src/widgets/: dashboard.cpp
SmartMaviManager/: Makefile  PROJECT_COMPLETE.md  PROJECT_COMPLETION_SUMMARY.md  RELEASE_NOTES_v2.0.0.md  SimpleGUI.pro  SmartMaviTest  demo  demo.cpp  interactive_cli  interactive_cli.cpp  launch_gui.sh  moc_mainwindow.cpp  moc_scheduleview.cpp  moc_simple_gui.cpp  moc_surveydialog.cpp  professional_app  professional_app.cpp  simple_gui.cpp  simple_gui.h  smart-mavi-manager_2.0.0_amd64.deb  smart_mavi_launcher.sh
SmartMaviManager/SmartMaviManager-v1.0.0/: SmartMaviManager  install.sh  run.sh
SmartMaviManager/SmartMaviManager-v1.0.0-source/: CMakeLists.txt  README.md  SmartMaviManager.pro  package.sh  resources.qrc
SmartMaviManager/SmartMaviManager-v1.0.0-source/include/: classinfo.h  mainwindow.h  schedule.h  schedulegenerator.h  surveydialog.h  teacher.h
SmartMaviManager/SmartMaviManager-v1.0.0-source/src/: classinfo.cpp  main.cpp  schedule.cpp  schedulegenerator.cpp  scheduleview.cpp  subject.cpp  teacher.cpp
SmartMaviManager/include/: scheduleview.h  subject.h  timeslot.h
SmartMaviManager/packaging/deb/smart-mavi-manager/DEBIAN/: control  postinst
SmartMaviManager/packaging/deb/smart-mavi-manager/usr/share/applications/: smart-mavi-manager.desktop
SmartMaviManager/packaging/deb/smart-mavi-manager/usr/share/doc/smart-mavi-manager/: README_GUI.md
SmartMaviManager/packaging/windows/: LICENSE.txt  SmartMaviManager_Installer.nsi  build_windows_installer.md
SmartMaviManager/src/: main_simple.cpp  mainwindow.cpp  surveydialog.cpp  timeslot.cpp
